--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,16 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,7 +38,6 @@
         android:layout_height="fill_parent"
         android:background="@drawable/customborder"
         android:layout_margin="16dp"
-        android:gravity="center_vertical"
         android:orientation="vertical">
 
         <TextView
@@ -36,32 +45,51 @@
             android:layout_height="wrap_content"
             android:text="@string/test_username"
             android:textSize="30dp"
-            android:textColor="@color/text_blue"/>
+            android:textColor="@color/text_blue"
+            android:fontFamily="sans-serif-light"/>
 
-        <EditText
-            android:id="@+id/editUserName"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="example@domain.com"
-            tools:ignore="TouchTargetSizeCheck" />
+            android:hint="@string/test_userExample">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/editUserName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="15"
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/test_password"
             android:textSize="30dp"
-            android:textColor="@color/text_blue"/>
+            android:textColor="@color/text_blue"
+            android:fontFamily="sans-serif-condensed-light"
+            android:paddingTop="10dp"/>
 
-        <EditText
-            android:id="@+id/editPassword"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="your password"
-            tools:ignore="TouchTargetSizeCheck"
-            android:inputType="textPassword"/>
+            android:hint="Your password"
+            app:passwordToggleEnabled="true">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/editPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:ems="15"
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
 
         <Button
-            android:id="@+id/botonLogin"
+            android:id="@+id/btnLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/test_login"
