--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
             android:text="@string/test_username"
             android:textSize="30dp"
             android:textColor="@color/text_blue"
-            android:fontFamily="sans-serif-light"/>
+            android:fontFamily="@font/nationalcartoon"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
@@ -58,6 +58,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="15"
+                android:background="@android:color/transparent"
                 />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -68,7 +69,7 @@
             android:text="@string/test_password"
             android:textSize="30dp"
             android:textColor="@color/text_blue"
-            android:fontFamily="sans-serif-condensed-light"
+            android:fontFamily="@font/nationalcartoon"
             android:paddingTop="10dp"/>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -83,6 +84,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:ems="15"
+                android:background="@android:color/transparent"
                 />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -95,6 +97,7 @@
             android:text="@string/test_login"
             android:textStyle="bold"
             android:onClick="onLogin"/>
+
 
     </LinearLayout>
 
