--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,7 +69,7 @@
             android:text="@string/test_password"
             android:textSize="30dp"
             android:textColor="@color/text_blue"
-            android:fontFamily="@font/nationalcartoon"
+            android:fontFamily="@font/dayslater"
             android:paddingTop="10dp"/>
 
         <com.google.android.material.textfield.TextInputLayout
